[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Stone_Tilemap.png" type="Texture" id=1]
[ext_resource path="res://Objects/FloorTilemap.gd" type="Script" id=2]
[ext_resource path="res://Objects/Floor.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Grass_Tilemap.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Brick_Tilemap.png" type="Texture" id=5]

[sub_resource type="TileSet" id=1]
resource_local_to_scene = true
1/name = "Stone_Tilemap.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 1600, 2000 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 0, 2 ), 256, Vector2( 0, 3 ), 260, Vector2( 0, 4 ), 4, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 1, 3 ), 325, Vector2( 2, 2 ), 320, Vector2( 2, 3 ), 325, Vector2( 2, 4 ), 5, Vector2( 3, 2 ), 64, Vector2( 3, 3 ), 65, Vector2( 3, 4 ), 1 ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 400, 400 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "Brick_Tilemap.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1200, 2000 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 0, 2 ), 256, Vector2( 0, 3 ), 260, Vector2( 0, 4 ), 4, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 320, Vector2( 1, 3 ), 325, Vector2( 1, 4 ), 5, Vector2( 2, 2 ), 64, Vector2( 2, 3 ), 65, Vector2( 2, 4 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 400, 400 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "Grass_Tilemap.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 800, 800 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 325, Vector2( 0, 1 ), 325, Vector2( 1, 0 ), 325, Vector2( 1, 1 ), 325 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 400, 400 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]

[node name="Floor" type="StaticBody2D"]
z_as_relative = false
script = ExtResource( 3 )

[node name="TileMapStone" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 3
z_as_relative = false
tile_set = SubResource( 1 )
cell_size = Vector2( 400, 400 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_use_parent = true
collision_friction = 0.0
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -196606, 1, 131072, -196605, 1, 131074, -196604, 1, 131074, -196603, 1, 131074, -196602, 1, 131074, -196601, 1, 131074, -196600, 1, 131074, -196599, 1, 131074, -196598, 1, 131075, -131070, 1, 262144, -131069, 1, 262146, -131068, 1, 262146, -131067, 1, 1, -131066, 1, 196610, -131065, 1, 196609, -131064, 1, 196610, -131063, 1, 196609, -131062, 1, 65536, -131061, 1, 131074, -131060, 1, 131074, -131059, 1, 131074, -131058, 1, 131074, -131057, 1, 131075, -65531, 1, 196608, -65530, 1, 196609, -65529, 1, 196610, -65528, 1, 196609, -65527, 1, 196610, -65526, 1, 196609, -65525, 1, 196609, -65524, 1, 196609, -65523, 1, 196610, -65522, 1, 196610, -65521, 1, 196611, 0, 22, 0, 1, 22, 2, 2, 1, 131072, 3, 1, 131074, 4, 1, 131074, 5, 1, 65537, 6, 1, 196610, 7, 1, 196610, 8, 1, 196610, 9, 1, 196609, 10, 1, 196609, 11, 1, 196610, 12, 1, 196610, 13, 1, 196609, 14, 1, 196609, 15, 1, 196611, 16, 22, 2, 17, 22, 2, 18, 22, 3, 65536, 22, 65536, 65537, 1, 131072, 65538, 1, 65537, 65539, 1, 196609, 65540, 1, 196610, 65541, 1, 196609, 65542, 1, 196609, 65543, 1, 196609, 65544, 1, 196610, 65545, 1, 196610, 65546, 1, 196610, 65547, 1, 196610, 65548, 1, 196609, 65549, 1, 196609, 65550, 1, 196609, 65551, 1, 196611, 65552, 22, 65537, 65553, 22, 65538, 65554, 22, 65539, 131072, 22, 65536, 131073, 1, 262144, 131074, 1, 1, 131075, 1, 196609, 131076, 1, 196610, 131077, 1, 196609, 131078, 1, 196610, 131079, 1, 196610, 131080, 1, 196610, 131081, 1, 196610, 131082, 1, 196610, 131083, 1, 196610, 131084, 1, 196610, 131085, 1, 196609, 131086, 1, 196609, 131087, 1, 196611, 131088, 22, 65537, 131089, 22, 65538, 131090, 22, 65539, 196608, 22, 65536, 196609, 22, 65538, 196610, 1, 262144, 196611, 1, 262146, 196612, 1, 262146, 196613, 1, 262146, 196614, 1, 262146, 196615, 1, 262146, 196616, 1, 262146, 196617, 1, 262146, 196618, 1, 262146, 196619, 1, 1, 196620, 1, 196610, 196621, 1, 196609, 196622, 1, 196609, 196623, 1, 196611, 196624, 22, 65537, 196625, 22, 65537, 196626, 22, 65539, 262144, 22, 65536, 262145, 22, 65538, 262146, 22, 65537, 262147, 22, 65539, 262155, 1, 262144, 262156, 1, 1, 262157, 1, 196609, 262158, 1, 196610, 262159, 1, 196611, 262160, 22, 65538, 262161, 22, 65537, 262162, 22, 65539, 327680, 22, 65536, 327681, 22, 65537, 327682, 22, 65538, 327683, 22, 65539, 327685, 22, 0, 327686, 22, 2, 327687, 22, 2, 327688, 22, 2, 327689, 22, 2, 327690, 22, 2, 327691, 22, 2, 327692, 1, 262144, 327693, 1, 262146, 327694, 1, 1, 327695, 1, 196611, 327696, 22, 65537, 327697, 22, 65538, 327698, 22, 65539, 393216, 22, 65536, 393217, 22, 65538, 393218, 22, 65537, 393219, 22, 65539, 393221, 22, 65536, 393222, 22, 65538, 393223, 22, 65537, 393224, 22, 65537, 393225, 22, 65537, 393226, 22, 65538, 393227, 22, 65537, 393228, 22, 65539, 393229, 17, 0, 393230, 1, 196608, 393231, 1, 196611, 393232, 22, 65538, 393233, 22, 65537, 393234, 22, 65539, 458752, 22, 65536, 458753, 22, 65537, 458754, 22, 65538, 458755, 22, 65539, 458757, 22, 65536, 458758, 22, 65538, 458759, 22, 65537, 458760, 22, 65537, 458761, 1, 131072, 458762, 1, 131074, 458763, 1, 131075, 458765, 17, 0, 458766, 1, 196608, 458767, 1, 196611, 458768, 22, 65537, 458769, 22, 65538, 458770, 22, 65539, 524288, 22, 65536, 524289, 22, 65537, 524290, 22, 65537, 524291, 22, 65539, 524293, 22, 65536, 524294, 22, 65538, 524295, 22, 65538, 524296, 1, 131072, 524297, 1, 65537, 524298, 1, 196609, 524299, 1, 65536, 524300, 1, 131075, 524301, 1, 0, 524302, 1, 196608, 524303, 1, 196611, 524304, 22, 65538, 524305, 22, 65537, 524306, 22, 65539, 589824, 22, 65536, 589825, 22, 65537, 589826, 22, 65537, 589827, 22, 65539, 589829, 22, 65536, 589830, 22, 65537, 589831, 22, 65537, 589832, 1, 262144, 589833, 1, 262146, 589834, 1, 1, 589835, 1, 196610, 589836, 1, 196611, 589837, 17, 0, 589838, 1, 262144, 589839, 1, 262147, 589840, 22, 65538, 589841, 22, 65537, 589842, 22, 65539, 655360, 22, 65536, 655361, 22, 65537, 655362, 22, 65537, 655363, 22, 65539, 655365, 22, 65536, 655370, 1, 196608, 655371, 1, 196610, 655372, 1, 196611, 655374, 22, 131072, 655375, 22, 131074, 655376, 22, 131074, 655377, 22, 131074, 655378, 22, 131075, 720896, 22, 65536, 720897, 22, 65537, 720898, 22, 65537, 720899, 22, 65539, 720901, 22, 65536, 720906, 1, 262144, 720907, 1, 262146, 720908, 1, 262147, 786432, 22, 65536, 786433, 22, 65537, 786434, 22, 65538, 786435, 22, 65539, 786437, 22, 131072, 786438, 22, 131074, 786442, 22, 131074, 786443, 22, 131074, 786444, 22, 131075, 851968, 22, 131072, 851969, 22, 131074, 851970, 22, 131074, 851971, 22, 131075, 1179649, 22, 0 )
script = ExtResource( 2 )

[node name="TileMapBrick" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 2
z_as_relative = false
tile_set = SubResource( 2 )
cell_size = Vector2( 400, 400 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_use_parent = true
collision_friction = 0.0
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( 0, 22, 0, 1, 22, 2, 2, 22, 2, 3, 22, 3, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 2, 0, 14, 22, 0, 15, 22, 2, 16, 22, 2, 17, 22, 2, 18, 22, 3, 65536, 22, 65536, 65537, 22, 65537, 65538, 22, 65538, 65539, 22, 65539, 65540, 4, 0, 65541, 4, 0, 65545, 22, 2, 65546, 22, 2, 65547, 22, 3, 65550, 22, 65536, 65551, 22, 65538, 65552, 22, 65537, 65553, 22, 65538, 65554, 22, 65539, 131072, 22, 65536, 131073, 22, 65538, 131074, 0, 131072, 131075, 0, 131073, 131076, 0, 131073, 131077, 0, 131073, 131078, 0, 131073, 131079, 0, 131073, 131080, 0, 131073, 131081, 0, 131073, 131082, 0, 131073, 131083, 0, 131074, 131086, 22, 65536, 131087, 22, 65537, 131089, 22, 65538, 131090, 22, 65539, 196608, 22, 65536, 196609, 22, 65538, 196610, 0, 196608, 196611, 0, 196609, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196609, 196615, 0, 196609, 196616, 0, 196609, 196617, 0, 196609, 196618, 0, 196609, 196619, 0, 65536, 196620, 0, 131074, 196622, 22, 65536, 196623, 22, 65537, 196625, 22, 65537, 196626, 22, 65539, 262144, 22, 65536, 262146, 0, 196608, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196609, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 196609, 262153, 0, 196609, 262154, 0, 196609, 262155, 0, 196609, 262156, 0, 65536, 262157, 0, 131073, 262158, 0, 131074, 262159, 22, 65537, 262161, 22, 65537, 262162, 22, 65539, 327680, 22, 65536, 327682, 0, 262144, 327683, 0, 1, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 196609, 327691, 0, 196609, 327692, 0, 196609, 327693, 0, 196609, 327694, 0, 65536, 327695, 0, 131074, 327697, 22, 65538, 327698, 22, 65539, 393216, 22, 65536, 393219, 0, 262144, 393220, 0, 262145, 393221, 0, 1, 393222, 0, 0, 393223, 0, 262145, 393224, 0, 1, 393225, 0, 196609, 393226, 0, 196609, 393227, 0, 196609, 393228, 0, 196609, 393229, 0, 196609, 393230, 0, 196609, 393231, 0, 196610, 393234, 22, 65539, 458752, 22, 65536, 458757, 0, 262144, 458758, 0, 262146, 458760, 0, 262144, 458761, 0, 1, 458762, 0, 196609, 458763, 0, 196609, 458764, 0, 196609, 458765, 0, 196609, 458766, 0, 196609, 458767, 0, 196610, 458770, 22, 65539, 524288, 22, 65536, 524289, 22, 65537, 524290, 22, 65537, 524291, 22, 65539, 524293, 22, 65536, 524294, 0, 0, 524297, 0, 262144, 524298, 0, 262145, 524299, 0, 1, 524300, 0, 196609, 524301, 0, 196609, 524302, 0, 196609, 524303, 0, 196610, 524304, 22, 65538, 524305, 22, 65537, 524306, 22, 65539, 589824, 22, 65536, 589825, 22, 65537, 589826, 22, 65537, 589827, 22, 65539, 589829, 22, 65536, 589830, 22, 65537, 589831, 0, 0, 589834, 22, 65538, 589835, 0, 196608, 589836, 0, 196609, 589837, 0, 196609, 589838, 0, 196609, 589839, 0, 196610, 589840, 22, 65538, 589841, 22, 65537, 589842, 22, 65539, 655360, 22, 65536, 655361, 22, 65537, 655362, 22, 65537, 655363, 22, 65539, 655365, 22, 65536, 655366, 22, 65538, 655367, 0, 0, 655370, 0, 131072, 655371, 0, 65537, 655372, 0, 196609, 655373, 0, 0, 655374, 0, 262145, 655375, 0, 262146, 655376, 22, 131074, 655377, 22, 131074, 655378, 22, 131075, 720896, 22, 65536, 720897, 22, 65537, 720898, 22, 65537, 720899, 22, 65539, 720901, 22, 65536, 720902, 22, 65537, 720903, 22, 65538, 720904, 0, 0, 720905, 0, 0, 720906, 0, 262144, 720907, 0, 262145, 720908, 0, 262145, 720909, 0, 262146, 786432, 22, 65536, 786433, 22, 65537, 786434, 22, 65538, 786435, 22, 65539, 786437, 22, 131072, 786438, 22, 131074, 786439, 22, 131074, 786440, 22, 131074, 786442, 22, 131074, 786443, 22, 131074, 786444, 22, 131075, 851968, 22, 131072, 851969, 22, 131074, 851970, 22, 131074, 851971, 22, 131075, 1179649, 22, 0 )
script = ExtResource( 2 )

[node name="TileMapDirt" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
z_index = 1
z_as_relative = false
tile_set = SubResource( 3 )
cell_size = Vector2( 400, 400 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_use_parent = true
collision_friction = 0.0
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( 0, 22, 0, 1, 22, 2, 2, 22, 2, 3, 22, 3, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 2, 0, 14, 22, 0, 15, 22, 2, 16, 22, 2, 17, 22, 2, 18, 22, 3, 65538, 22, 65538, 65539, 22, 65539, 65540, 4, 0, 65541, 4, 0, 65545, 22, 2, 65547, 22, 3, 65550, 22, 65536, 65551, 22, 65538, 65552, 22, 65537, 65553, 22, 65538, 65554, 22, 65539, 131077, 0, 0, 131080, 0, 0, 131086, 22, 65536, 131087, 22, 65537, 131089, 22, 65538, 131090, 22, 65539, 196622, 22, 65536, 196623, 22, 65537, 196625, 22, 65537, 196626, 22, 65539, 262144, 22, 65536, 262159, 22, 65537, 262161, 22, 65537, 262162, 22, 65539, 327680, 22, 65536, 327697, 22, 65538, 327698, 22, 65539, 393234, 22, 65539, 458752, 22, 65536, 458770, 22, 65539, 524288, 22, 65536, 524289, 22, 65537, 524290, 22, 65537, 524291, 22, 65539, 524305, 22, 65537, 524306, 22, 65539, 589824, 22, 65536, 589825, 22, 65537, 589826, 22, 65537, 589827, 22, 65539, 589829, 22, 65536, 589842, 22, 65539, 655360, 22, 65536, 655361, 22, 65537, 655362, 22, 65537, 655363, 22, 65539, 655365, 22, 65536, 655366, 22, 65538, 655378, 22, 131075, 720896, 22, 65536, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720901, 22, 65536, 720902, 22, 65537, 720903, 22, 65538, 786432, 22, 65536, 786433, 0, 0, 786434, 0, 65536, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 22, 131074, 786439, 22, 131074, 786440, 22, 131074, 786442, 22, 131074, 851968, 22, 131072, 851969, 0, 0, 851970, 0, 1, 851971, 0, 1, 851972, 0, 65536, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 917505, 0, 0, 917506, 0, 65537, 917507, 0, 65536, 917508, 0, 0, 917509, 0, 0, 917510, 0, 1, 917511, 0, 1, 917512, 0, 0, 917513, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 1, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65536, 983046, 0, 1, 983047, 0, 65537, 983048, 0, 0, 983049, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1179649, 22, 0 )
script = ExtResource( 2 )

[node name="TileMapWall" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
